src/tests/il/negatives/resume_outside_handler.il
il 0.1.3
func @main() -> void {
entry(%tok:ResumeTok):
  resume.next %tok
}
